Closed Bug 356536 Opened 19 years ago Closed 19 years ago

[Modern] Scroll bar slider jumps back up when mouse cursor strays from near scroll bar.

Categories

(SeaMonkey :: General, defect)

PowerPC
macOS
defect
Not set
minor

Tracking

(Not tracked)

RESOLVED FIXED

People

(Reporter: greatnessguru, Assigned: stefanh)

References

()

Details

(Keywords: fixed-seamonkey1.1, modern)

Attachments

(2 files, 1 obsolete file)

User-Agent: Mozilla/5.0 (Macintosh; U; PPC Mac OS X Mach-O; en-US; rv:1.8.1) Gecko/20061012 SeaMonkey/1.1b Build Identifier: Mozilla/5.0 (Macintosh; U; PPC Mac OS X Mach-O; en-US; rv:1.8.1) Gecko/20061012 SeaMonkey/1.1b 1. Browse to any site that makes the scroll bar appear on the right side. 2. Use mouse cursor to move scroll bar slider down a ways. 3. While keeping mouse cursor moving slider, slowly move mouse cursor to the left of the scroll bar. 4. As you keep moving mouse cursor left, and still moving slider with it, approximately as far left as the "Search" icon (near top of browser window) the slider will suddenly jump back to the top of the scroll bar... 5. ... But, if you just reverse the mouse cursor direction to the right the slider will jump down again to where you had it. 6. Now you can lift up on that mouse button! Mozilla/5.0 (Macintosh; U; PPC Mac OS X Mach-O; en-US; rv:1.8.1) Gecko/20061012 SeaMonkey/1.1b Not reproducible in Firefox 2.0.RC3.RC1 Reproducible in SM Chatzilla. First noticed about a week or so ago soon after I started using and testing SM, so can't say for sure when this started. Reproducible: Always
Keywords: regression
Version: unspecified → 1.8 Branch
I also see this in Minefield. But it seems to be standard in Windows. I also see this with other windows apps including Thunderbird 1.5. Mozilla/5.0 (Windows; U; Windows NT 5.1; en-US; rv:1.9a1) Gecko/20061012 Minefield/3.0a1 ID:2006101204 [cairo]
Changed: URL: http://kernelnewbies.org/LinuxChanges Reason: Horizontal scroll bar sliders also affected the same way. Eddie
I see it too. Mozilla/5.0 (Macintosh; U; PPC Mac OS X Mach-O; en-US; rv:1.8.1) Gecko/20061030 SeaMonkey/1.1b OS X 10.4.8 Actually, this seems to be a memory effect. Using this page, grab the vertical scrollbar and scroll to mid page. Release the button. Now, grab the scrollbar and scroll back to the top and, without releasing the button, move the mouse to the left. When it gets under [search] the page will scroll back to where you left it before.
Confirmed by: "Comment #3 From Rich Gray 2006-11-05". Still present in (Mac G3, OSX 10.3.all.updates): Mozilla/5.0 (Macintosh; U; PPC Mac OS X Mach-O; en-US; rv:1.8.1.1pre) Gecko/20061204 SeaMonkey/1.1 Nominating for blocking: SeaMonkey 1.1 Thank you, Eddie
Flags: blocking-seamonkey1.1?
Setting blocking- given that I haven't seen any other complaints and according to the bug, this has been happening for 2 months. Can you test a firefox build that uses the same Gecko versions? Neil, how could this affect seamonkey but not firefox?
Flags: blocking-seamonkey1.1? → blocking-seamonkey1.1-
Flags: blocking-seamonkey1.1- → blocking-seamonkey1.1?
(midair)
Flags: blocking-seamonkey1.1? → blocking-seamonkey1.1-
(In reply to comment #5) > Setting blocking- given that > _ I haven't seen any other complaints and > _ according to the bug, this has been happening for 2 months. Blocking Criteria, proposal: Can many frustrations, and maybe even a trickle of complaints, be expected within the first 2 months if we release this bug out into the wild? > Can you test a firefox build that uses the same Gecko versions? SeaMonkey 1.1.Nightly.2006.DEC.05 Mozilla/5.0 (Macintosh; U; PPC Mac OS X Mach-O; en-US; rv:1.8.1.1) Gecko/20061205 SeaMonkey/1.1 - Broken, both vertical and horizontal scroll bars: Navigator, Composer, IRC Chat Firefox 2.0.0.1.RC.1 Mozilla/5.0 (Macintosh; U; PPC Mac OS X Mach-O; en-US; rv:1.8.1.1) Gecko/20061204 Firefox/2.0.0.1 - Works for me: Both vertical and horizontal scroll bars function as expected no matter how far mouse cursor is moved away from scroll bars. Thank you, Eddie
There is a pref for this, slider.snapMultiplier http://lxr.mozilla.org/seamonkey/search?string=snapMultiplier The default is 0 for unix and OS/2 but 6 everywhere else. Please can you a) check about:config b) try a new firefox profile?
(In reply to comment #8) > There is a pref for this, slider.snapMultiplier > http://lxr.mozilla.org/seamonkey/search?string=snapMultiplier > The default is 0 for unix and OS/2 but 6 everywhere else. > Please can you a) check about:config b) try a new firefox profile? In SeaMonkey 1.1.Nightly.2006.DEC.04 (Mozilla/5.0 (Macintosh; U; PPC Mac OS X Mach-O; en-US; rv:1.8.1.1pre) Gecko/20061204 SeaMonkey/1.1): about:config > slider.snapMultiplier . . user set . . integer . . 6 Right-click > Modify ; "0" ; OK ; Quit SeaMonkey ; Start SeaMonkey ; It Works!!! Beautiful! Navigator, Composer, IRC Chat slider bars all work again, not matter How far away the mouse cursor is from a slider bar. Thank you, Thank you, Thank you, Neil. Ok, that means: Should the Mac OSX default value of about:config > slider.snapMultiplier be changed to "0"? "0": bug is turned Off <- proposed default, Mac OSX "6": bug is turned On <- current default, Mac OSX! Renominating for blocking: SeaMonkey 1.1 Thanks again, Eddie
Flags: blocking-seamonkey1.1- → blocking-seamonkey1.1?
(In reply to comment #9) > In SeaMonkey 1.1.Nightly.2006.DEC.04 (Mozilla/5.0 (Macintosh; U; PPC Mac OS X > Mach-O; en-US; rv:1.8.1.1pre) Gecko/20061204 SeaMonkey/1.1): > about:config > slider.snapMultiplier . . user set . . integer . . 6 Firefox 2.0.0.1.RC.1 Mozilla/5.0 (Macintosh; U; PPC Mac OS X Mach-O; en-US; rv:1.8.1.1) Gecko/20061204 Firefox/2.0.0.1 about:config > slider.snapMultiplier . . user set . . integer . . 6 - Sliderbars already work correctly, so No need to change this default value for Firefox Mac OSX. Only need to change this default value (to: "0") for SeaMonkey Mac OSX. Thank you, Eddie
We already have blocking criteria, proposal of others in a bug is inacceptable. And if your release engineer (CTho) turns down the blocking flag, he usually knows why he does so. Re-nominating all over again only makes us angry and probably not even wanting to fix this. We might approve a patch that can reproducably solve this, but from what I see, it clearly is not such a grave issue that we wouldn't be able to ship with it. (BTW, it's still marked UNCONFIRMED)
Flags: blocking-seamonkey1.1? → blocking-seamonkey1.1-
This only occurs in Modern theme. In Classic, the pref seems to be ignored (same behaviour if 0 or 6 - unlimited width). Also, this is not a regression - the behaviour exists in Mozilla 1.7.12. The reason why everything works when you set the pref to O is probably that the OS default is taking over. I haven't found any documentation of this, but it seems to me that the value you set in the pref is a width (Xscrollbarthickness)... For example, setting slider.snapMultiplier to 1, makes the width of the snapback be about 1 scrollbar. I wonder why the pref was set to 6 for mac since it looks like the "standard" behaviour is unlimited width (in Safari I can move the slider if I have the mouse cursor at the end of the screen).
Status: UNCONFIRMED → NEW
Ever confirmed: true
Keywords: regression
Summary: Scroll bar slider jumps back up when mouse cursor strays from near scroll bar. → [Modern] Scroll bar slider jumps back up when mouse cursor strays from near scroll bar.
(In reply to comment #12) >This only occurs in Modern theme. D'oh! Mac Classic uses native scrollbars, which don't have the problem...
Blocks: 90985
(In reply to comment #13) > (In reply to comment #12) > >This only occurs in Modern theme. > D'oh! Mac Classic uses native scrollbars, which don't have the problem... > Right, this also explains why it works in Firefox - Pinstripe uses native scrollbars too. In fact, this is a "problem" we have with Modern - no one else in the tree has a mac theme that doesn't use native theming (not that much testing and no one else but ourself will notice any regressions).
(In reply to comment #12) > Also, this is not a regression - > the behaviour exists in Mozilla 1.7.12. SeaMonkey 1.0.7.RC.20061203 Mozilla/5.0 (Macintosh; U; PPC Mac OS X Mach-O; en-US; rv:1.8.0.9pre) Gecko/20061203 SeaMonkey/1.0.7 - Default theme: Classic - Default: about:config > slider.snapMultiplier . . user set . . integer . . 6 Correct slider behavior == Firefox 2.0.0.1.RC1, default theme. - Selected theme: Modern - Restarted SM "Broken" slider behavior. - Set: about:config > slider.snapMultiplier . . user set . . integer . . "6" -> "0" - Restarted SM Correct slider behavior == Firefox 2.0.0.1.RC1, default theme. Repeated all the above for: SeaMonkey 1.1 Mozilla/5.0 (Macintosh; U; PPC Mac OS X Mach-O; en-US; rv:1.8.1.1pre) Gecko/20061204 SeaMonkey/1.1 - Same results. Comment #13 From neil@parkwaycc.co.uk > Mac Classic uses native scrollbars, which don't have the problem... So, legacy Classic code is overriding an about:config pref to match: " the "standard" behaviour ... (in Safari ... " and in Firefox. Comment #12 From Stefan > I wonder why the pref was set to 6 for mac since it looks like > the "standard" behaviour is unlimited width > (in Safari I can move the slider if I have > the mouse cursor at the end of the screen). So, legacy Modern behavior is a Regression from: " the "standard" behaviour ... (in Safari ... ", Firefox and Classic. What a mess. Proposals, SM 1.1 & SM 1.5: For SeaMonkey 1.1: Ship as is, this time... - Legacy Classic coding: wrong. - Legacy Classic behavior: correct. Matches: " the "standard" behaviour ... (in Safari ... " and in Firefox. - Legacy Modern coding correct. - Legacy Modern behavior (default value) wrong. Does not match: " the "standard" behaviour ... (in Safari ... ", Firefox and Classic. For SeaMonkey 1.5: Fix this mess... - Classic coding -> use: about:config > slider.snapMultiplier "0" - Classic behavior: no change. Matches: " the "standard" behaviour ... (in Safari ... " and in Firefox. - Modern coding: change, about:config > slider.snapMultiplier, "6" -> "0" - Modern behavior: corrected to match: " the "standard" behaviour ... (in Safari ... ", Firefox and Classic. Thank you, Eddie
(In reply to comment #14) > (In reply to comment #13) > > (In reply to comment #12) > > >This only occurs in Modern theme. > > D'oh! Mac Classic uses native scrollbars, which don't have the problem... > > > > Right, this also explains why it works in Firefox - Pinstripe uses native > scrollbars too. In fact, this is a "problem" we have with Modern - no one else > in the tree has a mac theme that doesn't use native theming (not that much > testing and no one else but ourself will notice any regressions). Proposal update, SM 1.5: Change Modern coding: use native scrollbars. Thank you, Eddie
(In reply to comment #16) > Proposal update, SM 1.5: > Change Modern coding: use native scrollbars. Is there Any Useful Reason for the legacy buggy Modern slider behavior (since at least Mozilla 1.7) to persist beyond SeaMonkey 1.0 into 1.1? If not, then, would someone please submit appropriate patches for both SeaMonkey 1.1 and 1.5?: Change Modern coding: use native scrollbars/theming Thank you, Eddie
(In reply to comment #11) From Robert Kaiser: > We might approve a patch that can reproducably solve this, ... Thank you, Robert. I'm not a developer. I hope someone here knows what to do here. Eddie
(In reply to comment #17) >Change Modern coding: use native scrollbars/theming No, we'll use a solution that corrects the value of slider.snapMultiplier
This turns off the scrollbar snapping pref (currently set to 6 by default) and will affect all mac apps in the tree that doesn't use native-themed scrollbars. Afaik only SeaMonkey with Modern theme. This shouldn't affect mac apps with native scrollbars (ie toolkit and seamonkey classic), the pref doesn't seem to have any affect on those.
Assignee: general → stefanh
Status: NEW → ASSIGNED
Attachment #247848 - Flags: review?(mano)
Version: 1.8 Branch → Trunk
Just in case... This is the SeaMonkey-only version for branch. I'll let Mano have a look at the global change first, though.
It might be better to make 0 the default and override with 6 for Windows?
Comment on attachment 247848 [details] [diff] [review] Set slider.snapMultiplier to 0 for all mac apps WhatNeilSaid.
Attachment #247848 - Flags: review?(mano)
I'll have a patch in a few days...
roc thought it was ok to just remove the initializing value ("=6") of gSnapMultiplier in nsSliderFrame. Maybe he could sr/rs the patch.
Attachment #248533 - Flags: superreview?(roc)
Attachment #248533 - Flags: review?(mano)
Comment on attachment 247853 [details] [diff] [review] Branch patch, SeaMonkey-only (checked in to 1.8 branch) Can we go with this on branch for seamonkey 1.1? Not sure if it's worth getting the core fix on branch (or that time permits it) Just an idea...
Attachment #247853 - Flags: superreview?(neil)
Attachment #247853 - Flags: review?(neil)
Attachment #247853 - Flags: approval-seamonkey1.1?
Attachment #247853 - Flags: superreview?(neil)
Attachment #247853 - Flags: superreview+
Attachment #247853 - Flags: review?(neil)
Attachment #247853 - Flags: review+
Attachment #247848 - Attachment is obsolete: true
Comment on attachment 247853 [details] [diff] [review] Branch patch, SeaMonkey-only (checked in to 1.8 branch) a=me for sm1.1
Attachment #247853 - Flags: approval-seamonkey1.1? → approval-seamonkey1.1+
Comment on attachment 247853 [details] [diff] [review] Branch patch, SeaMonkey-only (checked in to 1.8 branch) Neil, can you land this on branch, please?
Attachment #247853 [details] [diff] has now landed on branch - thanks Neil.
Attachment #247853 - Attachment description: Branch patch, SeaMonkey-only → Branch patch, SeaMonkey-only (checked in to 1.8 branch)
(In reply to comment #29) > Attachment #247853 [details] [diff] [edit] has now landed on branch - thanks Neil. Mac G3 OSX 10.3.9 SeaMonkey 1.1.Nightly Mozilla/5.0 (Macintosh; U; PPC Mac OS X Mach-O; en-US; rv:1.8.1.1) Gecko/20061214 SeaMonkey/1.1 > about:config > slider.snapMultiplier . . default . . integer . . 0 I selected the Modern theme. Restarted SeaMonkey. Great! Sliders all work no matter where on the screen the mouse cursor strays. Thanks, everyone. I hope a patch makes it into the SM 1.5a.Nightlies soon, too. I would like to switch to those for my "production" use/testing. Eddie
Attachment #248533 - Flags: superreview?(roc)
Attachment #248533 - Flags: superreview+
Attachment #248533 - Flags: review?(mano)
Attachment #248533 - Flags: review?
Comment on attachment 248533 [details] [diff] [review] Turn the pref off for everything except win Hmm
Attachment #248533 - Flags: review? → review?(mano)
Comment on attachment 248533 [details] [diff] [review] Turn the pref off for everything except win r=mano.
Attachment #248533 - Flags: review?(mano) → review+
Whiteboard: [checkin needed] of attachment #248533
mozilla/layout/xul/base/src/nsSliderFrame.cpp 1.151 mozilla/modules/libpref/src/init/all.js 3.664
Status: ASSIGNED → RESOLVED
Closed: 19 years ago
Resolution: --- → FIXED
Whiteboard: [checkin needed] of attachment #248533
(In reply to comment #33) > mozilla/layout/xul/base/src/nsSliderFrame.cpp 1.151 > mozilla/modules/libpref/src/init/all.js 3.664 Mac G3 OSX 10.3.9 SeaMonkey 1.5a.Nightly.: Mozilla/5.0 (Macintosh; U; PPC Mac OS X Mach-O; en-US; rv:1.9a2pre) Gecko/20061221 SeaMonkey/1.5a > about:config > slider.snapMultiplier . . default . . integer . . 0 I selected the Modern theme. Restarted SeaMonkey. Great! Sliders all work no matter where on the screen the mouse cursor strays. Thanks very, very much, everyone, especially Stefan. I, and, yes, at least a few, unknown others, now living and the not yet born, are very happy this most welcome patch has made it safely into the Mozilla code base for all time and posterity to come. http://Posterity.com/ "... the value of your vital existence cannot _ever_ be erased." Eddie
You need to log in before you can comment on or make changes to this bug.

Attachment

General

Created:
Updated:
Size: