Bug 356536 - [Mac] XUL Scroll bar slider jumps back up when mouse cursor strays from near scroll bar. patch from Stefan <stefanh@bluebottle.com>, r=me, sr=roc.